--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
           </div>
         </div>
       </nav>
-    <div class="background-pic">
-        <p><strong>Featured Shows</strong></p>
-    </div>
+      <div class="hero-image">
+        <div class="hero-text">
+          <h1 style="font-size:75px">Featured Shows</h1>
+        </div>
+      </div>
     <div class="shows">
         <div class="date">April 2020</div>
         <div class="show-info">
